# Search_web

./: .gitignore  CMakeLists.txt  README.md  config.ini  git_ssh_oldscripter  git_ssh_oldscripter.pub  main  main.cpp
include/: configuraton.h  httptools.h  monitor.h
src/: configuration.cpp  httptools.cpp
